--- a/style.css
+++ b/style.css
@@ -1,117 +1,145 @@
-/* see the brand guide for colors, fonts, and images in CodePen: 
-https://docs.google.com/document/d/13de5zlWmnox1BbZOiKo1p7tsirkgv0IQLG_bg1R60uE/edit?usp=sharing */
+body {
+  background-color: #131D26;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
+  line-height: 2;
+}
+h1, h2, h3 {
+  font-family: 'Poppins', sans-serif;
+}
+h1 {
+  font-size: 2rem;
+  margin-bottom: 0;
+  color: #59331D;
+}
+/* make images flexible */
+img {
+  max-width: 100%;
+}
 a {
-    color: #F2F2F2  ;
-    font-family: Lato,sans-serif;
-    text-decoration: none;
-  }
-  a:hover {
-    background-color: none;
-    text-decoration: none; }
-  
-  /* } @media only screen and (max-width: 600px) {
-    body {
-      background-color: lightblue;
-    }
-  */
-  nav a {
-    background-color: #F2F2F2 ;
-    color: #131D26 ;
-    padding: .5rem;
-    text-decoration: none;
-  }
-  .logo {
-   height: 40px; 
-  }
-  nav a:hover{ 
-    color: #D98555 }
-  body {
-    background-color: #F2F2F2 ;
-    font-family: "Lato", sans-serif;
-    line-height: 1.5;
-  }
-  
-  @media all and (max-width: 480px) {
-    display: block;
-  }
-  nav a {
-    border: 1px ;
-    border-radius: 2px;
-    border-style: solid;
-    border-color: #D98555 ;
-    border-bottom-style: none;
-  }
-  footer a {
-    background-color: #131D26 ;
-    color: #F2F2F2;
-    padding: none;
-    font-size: .5rem;
-  }
-  footer a:hover{ 
-    color: #D98555;}
-  p {
-      font-family: Lato, Helvetica, sans-serif;
-      color: #131D26 ;
-      font-size: 1rem;
-      line-height: 1.5;
-  }
-  h1 {
-    background-color:#59331D   ;
-    color: #F2F2F2 ;
-    font-family: Poppins,sans-serif;
-    font-size: 3rem;
-    padding: 1rem;
+  color: #59331D ;
+}
+a:hover {
+  text-decoration: none;
+}
+header {
+  border-bottom: 10px solid #d98555;
+}
+/* navbar styling */
+nav ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+nav li {
+  margin: 0 1rem 1rem 1rem;
+  font-size: 1.3rem;
+}
+/* max width on the image in pixels */
+nav .logo img {
+  max-width: 150px;
+}
+/* flex basis on the image container, li */
+nav .logo {
+  flex-basis: 100%;
+  text-align: center;
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  display: block;
+}
+nav a:hover {
+  color: #d98555;
+}
+/* establishes a white background */
+.main-bkgd {
+  background: #ffffff url(https://assets.codepen.io/6306176/gulp-bean-bkgd.jpg) repeat-x bottom;
+  padding-bottom: 300px;
+}
+/* sits inside of the white background, centered */
+.main {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 2rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+article {
+  flex-basis: 73%;
+}
+figure {
+  margin: 3rem 0 0 0;
+  flex-basis: 25%;
+  background-color: #59331d;
+  border-radius: 10px;
+}
+figure img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+figcaption {
+  color: #f2f2f2;
+  padding: 0.5rem;
+}
+.button {
+  display: inline-block;
+  background-color: #59331D;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  margin: 0;
+  color: #f2f2f2;
+  text-decoration: none;
+  border: 3px solid #59331d;
+}
+.button:hover {
+  background-color: #f2f2f2;
+  color: #59331d;
+}
+footer {
+  color: #f2f2f2;
+  text-align: center;
+  border-top: 10px solid #d98555;
+  font-family: Montserrat,sans-serif;
+  font-size: .8rem; }
+
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+footer a {
+  background-color: #59331D ;
+  color: #F2F2F2;
+  padding: none;
+  font-size: .5rem;
+}
+footer a:hover{ 
+  color: #D98555;}
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 15px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+@media (min-width: 600px) {
+   .row {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
    }
-  h1 {
-    border: 1px ;
-    border-radius: 1px;
-    border-style: solid;
-    border-color: #131D26 ;
-    text-align: center;
-  }
-   figcaption {color: #131D26 ;
-    font-family: Lato,sans-serif;
-    font-size: 90%; 
-  }
-   footer {color: #59331D  ;
-    font-family: Montserrat,sans-serif;
-    font-size: .8rem; }
-  b {color:#59331D;
-  text-decoration:bold;}
-  i {color:#59331D;
-  text-decoration:bold;}
-  u {color:#59331D;
-  text-decoration: underline;}
-  
-  .fa {
-    padding: 10px;
-    font-size: 30px;
-    width: 15px;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 50%;
-  }
-  button{  background-color: #D98555; 
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 12px;
-    font-family: Lato,sans-serif;
-  }
-  @media only screen and (min-width: 768px) {
-    .product-container {
-      grid-template-columns: repeat(2, 1fr);
-      column-gap: 0.5rem;
-    }
-  }
-  
-  @media (min-width: 1024px) {
-    .product-container {
-      grid-template-columns: repeat(3, 1fr);
-      column-gap: 0.5rem;
-    }
-  }
-  
+   .span4 {
+      flex-basis: 22%;
+   }
+}
